# sfml-games

./: .clang-format  .gitignore  AnimationHolder.cpp  AnimationHolder.h  ArkanoidGame.cpp  ArkanoidGame.h  CMakeLists.txt  FifteenGame.cpp  FifteenGame.h  Game.cpp  Game.h  Level.cpp  Level.h  Level1.tmx  Makefile  PlatformerGame.cpp  PlatformerGame.h  Player.cpp  Player.h  SnakeGame.cpp  SnakeGame.h  Window.cpp  Window.h  World.cpp  World.h  main.cpp
